# tree-sitter-structurizr

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Justfile  README.md  SESSION.md  TODO.md  dist-workspace.toml  grammar.js  hk.pkl  package.json  tree-sitter.json
.config/: nextest.toml
crates/structurizr-analysis/: Cargo.toml  README.md
crates/structurizr-analysis/benches/: analysis.rs
crates/structurizr-analysis/src/: diagnostics.rs  includes.rs  lib.rs  parse.rs  snapshot.rs  span.rs  symbols.rs  workspace.rs
crates/structurizr-analysis/src/extract/: constants.rs  diagnostics.rs  includes.rs  mod.rs  symbols.rs
crates/structurizr-analysis/tests/: document_snapshots.rs  property_analysis.rs  property_workspace.rs  workspace_discovery.rs  workspace_index.rs
crates/structurizr-analysis/tests/snapshots/: document_snapshots__document_snapshot@deployment__deployment_navigation_ok.snap  document_snapshots__document_snapshot@directives__identifiers_directive_ok.snap  document_snapshots__document_snapshot@directives__identifiers_missing_value_err.snap  document_snapshots__document_snapshot@directives__identifiers_unexpected_tokens_err.snap  document_snapshots__document_snapshot@identifiers__assigned_identifiers_ok.snap  document_snapshots__document_snapshot@identifiers__direct_references_ok.snap  document_snapshots__document_snapshot@identifiers__dynamic_views_ok.snap  document_snapshots__document_snapshot@identifiers__multi_line_invalid_nesting_err.snap  document_snapshots__document_snapshot@identifiers__view_animations_ok.snap  document_snapshots__document_snapshot@includes__model_fragment_ok.snap  document_snapshots__document_snapshot@includes__views_fragment_ok.snap  document_snapshots__document_snapshot@includes__workspace_fragments_ok.snap  document_snapshots__document_snapshot@includes__workspace_fragments_unexpected_tail_err.snap  document_snapshots__document_snapshot@relationships__named_relationship_dynamic_reference_ok.snap  document_snapshots__document_snapshot@relationships__named_relationship_missing_destination_err.snap  document_snapshots__document_snapshot@relationships__named_relationships_ok.snap  workspace_discovery__workspace_discovery@cycle.snap  workspace_discovery__workspace_discovery@directory_include.snap  workspace_discovery__workspace_discovery@ignored_explicit.snap  workspace_discovery__workspace_discovery@inherited_constants.snap  workspace_discovery__workspace_discovery@minimal_scan.snap  workspace_discovery__workspace_discovery@missing_include.snap  workspace_discovery__workspace_discovery@remote_include.snap  workspace_discovery__workspace_discovery@unsupported_escape.snap  workspace_index__workspace_index@cross_file_navigation.snap  workspace_index__workspace_index@deployment_navigation.snap  workspace_index__workspace_index@duplicate_bindings.snap  workspace_index__workspace_index@hierarchical_identifiers.snap  workspace_index__workspace_index@inherited_constants.snap  workspace_index__workspace_index@multi_instance_open_fragment.snap
crates/structurizr-check/: Cargo.toml
crates/structurizr-check/src/: check.rs  cli.rs  dump.rs  lib.rs  main.rs  render.rs  report.rs
crates/structurizr-check/tests/: cli.rs
crates/structurizr-check/tests/snapshots/: cli__check_json_big_bank_plc_reports_current_golden_record_diagnostics.snap
crates/structurizr-cli/: Cargo.toml  README.md
crates/structurizr-cli/src/: check.rs  cli.rs  dump.rs  lib.rs  observability.rs  report.rs
crates/structurizr-cli/tests/: cli.rs
crates/structurizr-cli/tests/snapshots/: cli__check_json_big_bank_plc_reports_current_golden_record_diagnostics.snap
crates/structurizr-grammar/: Cargo.toml  README.md
crates/structurizr-grammar/queries/: highlights.scm
crates/structurizr-grammar/tests/: fixtures.rs
crates/structurizr-grammar/tests/snapshots/: fixtures__fixture@archetypes__extensions_ok.snap  fixtures__fixture@archetypes__find_element_paths_ok.snap  fixtures__fixture@archetypes__find_elements_in_groups_ok.snap  fixtures__fixture@deployment__aws_ok.snap  fixtures__fixture@deployment__instance_bodies_ok.snap  fixtures__fixture@deployment__no_relationship_ok.snap  fixtures__fixture@lsp__directives__identifiers_missing_value_err.snap  fixtures__fixture@lsp__identifiers__assigned_identifiers_ok.snap  fixtures__fixture@lsp__identifiers__direct_references_ok.snap  fixtures__fixture@lsp__identifiers__multi_line_invalid_nesting_err.snap  fixtures__fixture@lsp__includes__model_fragment_ok.snap  fixtures__fixture@lsp__includes__views_fragment_ok.snap  fixtures__fixture@lsp__relationships__named_relationships_ok.snap  fixtures__fixture@model__model_properties_err.snap  fixtures__fixture@model__model_properties_ok.snap  fixtures__fixture@styles__color_nodes_ok.snap  fixtures__fixture@styles__comments_and_styles_ok.snap  fixtures__fixture@views__advanced_ok.snap  fixtures__fixture@views__dynamic_explicit_relationships_ok.snap  (+5 more)
crates/structurizr-lsp/: Cargo.toml  README.md
crates/structurizr-lsp/benches/: session.rs
crates/structurizr-lsp/src/: capabilities.rs  documents.rs  lib.rs  main.rs  server.rs  state.rs
crates/structurizr-lsp/tests/: hover.rs  lifecycle.rs  navigation.rs  rename.rs
crates/strz/: Cargo.toml  README.md  build.rs
crates/strz-format/: Cargo.toml
crates/strz-format/src/: error.rs  formatter.rs  lib.rs  options.rs  printer.rs
crates/strz-format/tests/: fixtures.rs
crates/strz-grammar/: Cargo.toml  README.md  grammar.js
crates/strz-grammar/queries/: highlights.scm
crates/strz-grammar/src/: grammar.json  node-types.json  parser.c
crates/strz-grammar/tests/: highlights.rs  property_parser.rs
crates/strz-lsp/: Cargo.toml  README.md
crates/strz-lsp/benches/: session.rs
crates/strz-lsp/src/: capabilities.rs  documents.rs  identifier.rs  lib.rs  server.rs  state.rs
crates/strz-lsp/tests/: hover.rs  lifecycle.rs  navigation.rs  rename.rs
crates/strz/src/: check.rs  cli.rs  dump.rs  format.rs  lib.rs  main.rs  render.rs  report.rs  version.rs
crates/strz/tests/: build_metadata.rs  cli.rs
(+701 files in other folders)
