[workspace.package]
authors = ["Rob Hand <146272+sinon@users.noreply.github.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage =  "https://github.com/sinon/tree-sitter-structurizr"
repository = "https://github.com/sinon/tree-sitter-structurizr"
description = "LSP for Structurizr C4 modelling language with tree-sitter grammar"

[workspace]
resolver = "2"
members = [
  "crates/structurizr-analysis",
  "crates/structurizr-cli",
  "crates/structurizr-grammar",
  "crates/structurizr-lsp",
]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
