[package]
name = "structurizr-analysis"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = false

[[bench]]
harness = false
name = "analysis"

[dependencies]
ignore = { workspace = true }
salsa = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-structurizr = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
indoc = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
