[package]
name = "structurizr-check"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
structurizr-analysis = { version = "0.1.0", path = "../structurizr-analysis" }

[dev-dependencies]
insta = "1.47.0"
insta-cmd = "0.6.0"
