[package]
name = "tree-sitter-structurizr"
description = "Grammar for the Structurizr DSL for describing C4 models"
version = "0.0.1"
authors = ["Rob Hand <146272+sinon@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "structurizr"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/sinon/tree-sitter-structurizr"
homepage = "https://github.com/sinon/tree-sitter-structurizr"
edition = "2024"
autoexamples = false
build = "bindings/rust/build.rs"
include = [
  "README.md",
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
anyhow = "1.0.102"
cc = "1.2"

[dev-dependencies]
indoc = "2.0"
insta = "1.43"
proptest = "1.11.0"
rstest = "0.26"
tree-sitter = "0.26.7"
