[package]
name = "structurizr-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
line-index = "0.1.2"
structurizr-analysis = { version = "0.1.0", path = "../structurizr-analysis" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
tower-lsp-server = "0.23.0"

[dev-dependencies]
futures = "0.3"
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
