[package]
name = "structurizr-lsp"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "session"
harness = false

[dependencies]
line-index = "0.1.2"
structurizr-analysis = { version = "0.1.0", path = "../structurizr-analysis" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
tower-lsp-server = "0.23.0"

[dev-dependencies]
criterion = { version = "4.4.1", package = "codspeed-criterion-compat" }
futures = "0.3"
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
