[package]
name = "strz-format"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Transport-agnostic formatter core for Structurizr DSL"
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
strz-analysis = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }
rstest = { workspace = true }
