[package]
name = "strz-lsp"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "LSP for Structurizr C4 modelling language"
documentation = { workspace = true }
readme = "../../README.md"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = ["lsp", "structurizr"]
categories = ["lsp", "parsing", "text-editors"]
publish = false

[[bench]]
harness = false
name = "session"

[dependencies]
line-index = { workspace = true }
strz-analysis = { workspace = true }
tokio = { workspace = true, features = [
  "io-std",
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true }
indoc = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
